Temel seviye OOP Çalışması 2 bitiş

--- a/Inheritance/Inheritance.csproj
+++ b/Inheritance/Inheritance.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F97D7EF3-65C7-4FAD-9239-E0DBBA330B3C}</ProjectGuid>
+    <ProjectGuid>{958FF771-4F1A-4C32-B276-4B3BADC7BA29}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Interfaces2</RootNamespace>
-    <AssemblyName>Interfaces2</AssemblyName>
+    <RootNamespace>Inheritance</RootNamespace>
+    <AssemblyName>Inheritance</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICustomerDal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
