--- a/Polymorphism/Polymorphism.csproj
+++ b/Polymorphism/Polymorphism.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F97D7EF3-65C7-4FAD-9239-E0DBBA330B3C}</ProjectGuid>
+    <ProjectGuid>{63B7ECB6-D1E2-41E8-9AD1-0E7F509D0A2F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Interfaces2</RootNamespace>
-    <AssemblyName>Interfaces2</AssemblyName>
+    <RootNamespace>Polymorphism</RootNamespace>
+    <AssemblyName>Polymorphism</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
